# cookiecutter-ml-package

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  bitbucket-pipelines.yml  noxfile.py  pylintrc  release-version.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.project_name}}/jupyter-notebooks/: example.ipynb
{{cookiecutter.project_name}}/requirements/: develop.txt  tests.txt
{{cookiecutter.project_name}}/tests/: test_version.py
