[metadata]
name = {{ cookiecutter.project_slug }}
description = {{ cookiecutter.project_short_description }}
author = {{ cookiecutter.full_name }}
email = {{ cookiecutter.email }}

[options]
setup_requires =
  setuptools_scm
package_dir =
    =src
packages = find:
include_package_data = true


[options.packages.find]
where = src


[pydocstyle]
convention = numpy
# D105 Missing docstring in magic method
# D202 No blank lines allowed after function docstring
add_ignore = D105, D202

[mypy]
ignore_missing_imports = true

[isort]
line_length = 88
multi_line_output = 3
known_first_party=base_cookie
include_trailing_comma=True
use_parentheses=True
default_section = THIRDPARTY
force_sort_within_sections=True
order_by_type=False

[flake8]
# Specify the line length to be compatible with black.
max_line_length = 88
# Ignore inconsistent warnings:
# E203 whitespace before ':'
# W503 line break before binary operator
ignore = E203, W503
# Select all pycodestyle errors (E) and warnings (W) and pyflakes (F) errors.
select = E,F,W

[semantic_release]
version_variable = release-version.txt:released_version
version_source = tag
commit_version_number = true
